--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@prisma/client": "6.1.0",
     "dotenv": "^16.4.7",
     "env-var": "^7.5.0",
     "express": "^4.21.2"
