--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "prisma": "^6.1.0",
     "rimraf": "^6.0.1",
