--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "npm run prisma:migrate:test && jest",
+    "test:watch": "npm run prisma:migrate:test && jest --watch",
+    "test:coverage": "npm run prisma:migrate:test && jest --coverage",
+    "prisma:migrate:prod": "prisma migrate deploy",
+    "primas:migrate:test": "dotenv -e .env.test -- npx prisma migrate desploys",
     "dev": "tsnd --respawn --clear src/app.ts",
     "build": "rimraf ./dist && tsc",
     "start": "npm run build && node dist/app.js"
@@ -20,6 +22,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
     "@types/supertest": "^6.0.2",
+    "dotenv-cli": "^8.0.0",
     "jest": "^29.7.0",
     "prisma": "^6.1.0",
     "rimraf": "^6.0.1",
