--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:watch": "npm run prisma:migrate:test && jest --watch",
     "test:coverage": "npm run prisma:migrate:test && jest --coverage",
     "prisma:migrate:prod": "prisma migrate deploy",
-    "primas:migrate:test": "dotenv -e .env.test -- npx prisma migrate desploys",
+    "prisma:migrate:test": "dotenv -e .env.test -- npx prisma migrate deploy",
     "dev": "tsnd --respawn --clear src/app.ts",
     "build": "rimraf ./dist && tsc",
     "start": "npm run build && node dist/app.js"
