--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run prisma:migrate:test && jest",
-    "test:watch": "npm run prisma:migrate:test && jest --watch",
+    "test:watch": "npm run prisma:migrate:test && jest --watchAll",
     "test:coverage": "npm run prisma:migrate:test && jest --coverage",
     "prisma:migrate:prod": "prisma migrate deploy",
     "prisma:migrate:test": "dotenv -e .env.test -- npx prisma migrate deploy",
